[package]
name = "vchatlog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = "full"
lto = "thin"
split-debuginfo = "packed"

[profile.dev]
debug = "full"
opt-level = 0

[dependencies]
const_format = "0.2.34"
kuchiki = "0.8.1"
log = "0.4.25"
meowtonin = { git = "https://github.com/Absolucy/meowtonin.git" }
mysql = { git = "https://github.com/ZeWaka/rust-mysql-simple.git", tag = "v26.0.0" }
# mongodb = { version = "3.2.1", features = ["sync"] }
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
simple-logging = "2.0.2"
